objects/ASI_TnE_Proxy_Driving_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_AP_Sync__c</fullName>
        <label>AP Sync</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Brand__c</fullName>
        <label>Brand</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KRW</fullName>
                    <default>true</default>
                    <label>KRW</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Department_Code__c</fullName>
        <formula>MID(ASI_TnE_Requester_Department__c, 1, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Department__c</fullName>
        <formula>MID(ASI_TnE_Requester_Department__c, 5,  LEN(ASI_TnE_Requester_Department__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_First_Name__c</fullName>
        <formula>ASI_TnE_Requestor_Record__r.ASI_eForm_Employee_First_Name__c</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_GL_Date__c</fullName>
        <defaultValue>IF( DAY(TODAY())&gt;1, DATE(YEAR(TODAY()), MONTH(TODAY())+1, 1),DATE(YEAR( TODAY()) , MONTH(TODAY()),1))</defaultValue>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Brand_Co__c</fullName>
        <formula>ASI_TnE_Present_Co_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Co</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Credit_Account_Number__c</fullName>
        <formula>ASI_TnE_Present_Co_Code__c&amp;&quot;1D&quot;&amp;ASI_TnE_Department_Code__c&amp;&quot;01&quot;&amp;&quot;.6130.110000&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit _Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Debit_Account_Number__c</fullName>
        <formula>ASI_TnE_KR_ProxyDrivingTransaction__r.ASI_TnE_KR_Sub_brand_BU_code__c&amp;&quot;.5559.700000&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit_ Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_PD_External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_PD_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Waiting for Finance Verification</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_ProxyDrivingTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proxy Driving Transaction</label>
        <referenceTo>ASI_TnE_KR_ProxyDrivingTransaction__c</referenceTo>
        <relationshipLabel>Proxy Driving Claims</relationshipLabel>
        <relationshipName>ProxyHeader_lookup_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Reference_2__c</fullName>
        <formula>ASI_TnE_KR_ProxyDrivingTransaction__r.ASI_TnE_KR_Promotion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Korean_Name__c</fullName>
        <formula>ASI_TnE_Requestor_Record__r.ASI_eForm_Employee_Korean_Name__c</formula>
        <label>Korean Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Last_Name__c</fullName>
        <formula>ASI_TnE_Requestor_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Phase__c</fullName>
        <formula>&quot;A19&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Present_Co_Code__c</fullName>
        <formula>MID(ASI_TnE_Requester_Company__c, 1, 3 )</formula>
        <label>Co</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Present_Co__c</fullName>
        <formula>MID(ASI_TnE_Requester_Company__c, 5,  LEN(ASI_TnE_Requester_Company__c) )</formula>
        <label>Present Co</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Proxy_Agency_Code__c</fullName>
        <label>Proxy Agency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Requester_Company__c</fullName>
        <label>Requester Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Requester_Department__c</fullName>
        <label>Requester Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Requester_ID__c</fullName>
        <label>Requester ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Requester_Name__c</fullName>
        <formula>ASI_TnE_Requestor_Record__r.ASI_eForm_Employee_First_Name__c +&apos; &apos; + ASI_TnE_Requestor_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <label>Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Requester_Title__c</fullName>
        <formula>ASI_TnE_Requestor_Record__r.ASI_eForm_Employee_Job_Title__c</formula>
        <label>Requester Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Requestor_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester Record</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipName>Proxy_Driving_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sub_Type1__c</fullName>
        <formula>&quot;A&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Type1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sub_Type2__c</fullName>
        <formula>&quot;A&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Type2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sub_ledger_Employee__c</fullName>
        <formula>ASI_TnE_Requester_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-ledger(Employee)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sync_to_JDE_Date__c</fullName>
        <label>Sync to JDE date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_TnE_Proxy_Driving_Detail__c.ASI_TnE_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TnE_Proxy_Driving_Detail__c.ASI_TnE_Proxy_Driving_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASU_TnE_Sub_ledger_A_P__c</fullName>
        <formula>ASI_TnE_KR_ProxyDrivingTransaction__r.ASI_TnE_KR_Subledger__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-ledger(A&amp;P)</label>
        <type>Text</type>
    </fields>
    <label>Proxy Driving Claim</label>
    <listViews>
        <fullName>ASI_KR_All_Proxy_Claims</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>ASI_TnE_Proxy_Agency_Code__c</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_GL_Date__c</columns>
        <columns>ASI_TnE_KR_PD_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Proxy_Driving_Request__c.ASI_TnE_KR_Proxy_Driving_Request</value>
        </filters>
        <label>All KR Proxy Claims</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_KR_MY_Proxy_Claims</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>ASI_TnE_KR_PD_Status__c</columns>
        <columns>ASI_TnE_Proxy_Agency_Code__c</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_GL_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Proxy_Driving_Request__c.ASI_TnE_KR_Proxy_Driving_Request</value>
        </filters>
        <label>MY KR Proxy Claims</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_Proxy_Claims2016_Approved</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>ASI_TnE_KR_PD_Status__c</columns>
        <columns>ASI_TnE_Requester_Department__c</columns>
        <columns>ASI_TnE_Requester_Name__c</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_GL_Date__c</columns>
        <columns>ASI_TnE_Proxy_Agency_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Proxy_Driving_Request__c.ASI_TnE_KR_Proxy_Driving_Request</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_PD_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>All KR Proxy Claims2016 (Approved)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_Proxy_Claims_Draft_Submitted</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Year__c</columns>
        <columns>ASI_TnE_KR_Month__c</columns>
        <columns>ASI_TnE_KR_PD_Status__c</columns>
        <columns>ASI_TnE_Requester_Department__c</columns>
        <columns>ASI_TnE_Requester_Name__c</columns>
        <columns>ASI_TnE_Total_Amount__c</columns>
        <columns>ASI_TnE_GL_Date__c</columns>
        <columns>ASI_TnE_Proxy_Agency_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Proxy_Driving_Request__c.ASI_TnE_KR_Proxy_Driving_Request</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_PD_Status__c</field>
            <operation>equals</operation>
            <value>Draft,Submitted</value>
        </filters>
        <filters>
            <field>ASI_TnE_KR_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>All KR Proxy Unclaims2016</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PD-{000000}</displayFormat>
        <label>Proxy Driving Claim Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proxy Driving Claims</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_KR_Proxy_Driving_Request</fullName>
        <active>true</active>
        <label>KR Proxy Driving Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>